agrege lo que dijo el rm, cambie la cabecera maestra y cambie color

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
             <div id= "cabecera">
                 Hyperblog 
                 <span id= "tagline">
-                    tu blog de confianza
+                    tu blog maestro
                 </span>
             </div>
             <div id="post"> 
@@ -28,6 +28,7 @@
                     o salir, no salgas plox.
                 
                 </p>
+                <p>amate dijo el RM.</p>
 
             </div>
             
