--- a/blogpost.html
+++ b/blogpost.html
@@ -31,6 +31,9 @@
                 <p>amate dijo el RM.</p>
 
             </div>
+            <div id="footer">
+                hecho con amor &lt;3
+            </div>
             
         </div>
         
