--- a/blogpost.html
+++ b/blogpost.html
@@ -22,6 +22,7 @@
                     hacer con ramas
                 </p>
                 <p><img src="https://imgur.com/a/9j7FIRk" width="100%"/></p>
+                <p><img src="imagenes/chibi.jpg" width="100%"/></p>
                 <p>
                     Los blogs son la mejor forma 
                     de compartir informacion
