--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,7 @@
                 <img id="logo" src="imagenes/logo.png"/>
                 Hyperblog 
                 <span id= "tagline">
-                    tu blog de cabecera
+                    tu blog de confianza
                 </span>
             </div>
             <div id="post"> 
